force-app/main/default/objects/Case/fields/Account_ACN__c.field-meta.xml
<CustomField>
    <fullName>Account_ACN__c</fullName>
    <label>Account ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>