force-app/main/default/objects/Case/fields/Account_SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_Number__c</fullName>
    <label>Account SAP Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>