force-app/main/default/objects/Case/fields/ACN_workflow__c.field-meta.xml
<CustomField>
    <fullName>ACN_workflow__c</fullName>
    <label>ACN workflow</label>
    <length>15</length>
    <type>Text</type>
</CustomField>