force-app/main/default/objects/Case/fields/Active_A_Inactive_Changed__c.field-meta.xml
<CustomField>
    <fullName>Active_A_Inactive_Changed__c</fullName>
    <formula>Not(FS_Active_Inactive__c == FS_Static_Active_Inactive__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (A) / Inactive Changed</label>
    <type>Checkbox</type>
</CustomField>