force-app/main/default/objects/Case/fields/Additional_Requester__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requester__c</fullName>
    <label>Additional Requester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>