force-app/main/default/objects/Case/fields/Additional_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requester_Email__c</fullName>
    <label>Additional Requester Email</label>
    <type>Email</type>
</CustomField>