force-app/main/default/objects/Case/fields/Additional_Requester_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requester_Phone__c</fullName>
    <label>Additional Requester Phone</label>
    <type>Phone</type>
</CustomField>