force-app/main/default/objects/Case/fields/AW_Last_Seen_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>AW_Last_Seen_Date_Changed__c</fullName>
    <formula>IF( 
AND( 
isnull(FS_Last_Seen_Date__c),isnull(FS_Static_Last_Seen_Date__c ) 
), 
false, 


IF( 
or( 
isnull(FS_Static_Last_Seen_Date__c  ),isnull(FS_Last_Seen_Date__c) 
), true,Not(FS_Last_Seen_Date__c == FS_Static_Last_Seen_Date__c) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AW Last Seen Date Changed</label>
    <type>Checkbox</type>
</CustomField>