force-app/main/default/objects/Case/fields/Bottler_ACN__c.field-meta.xml
<CustomField>
    <fullName>Bottler_ACN__c</fullName>
    <label>Bottler ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>