force-app/main/default/objects/Case/fields/Build_ID_SW_Version_Changed__c.field-meta.xml
<CustomField>
    <fullName>Build_ID_SW_Version_Changed__c</fullName>
    <formula>Not( FS_Static_Build_Id_SW_Version__c == FS_Build_Id_SW_Version__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build ID/SW Version Changed</label>
    <type>Checkbox</type>
</CustomField>