force-app/main/default/objects/Case/fields/Bundle_Name_Changed__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name_Changed__c</fullName>
    <formula>Not( FS_Static_Bundle_Name__c == FS_Bundle_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Name Changed</label>
    <type>Checkbox</type>
</CustomField>