force-app/main/default/objects/Case/fields/Case_Owner_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Cell_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case  Owner Cell Phone</label>
    <type>Text</type>
</CustomField>