force-app/main/default/objects/Case/fields/Case_Owner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email_Address__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case  Owner Email Address</label>
    <type>Text</type>
</CustomField>