force-app/main/default/objects/Case/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <label>Case Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>PIA</fullName>
            </value>
            <value>
                <fullName>SW &amp; Electronics Field Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>