force-app/main/default/objects/Case/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>List types of issues relevant to case</description>
    <inlineHelpText>Please list the types of issues relevant to this case</inlineHelpText>
    <label>Issue Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>FS_Dispenser_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>Agitation</fullName>
            </value>
            <value>
                <fullName>Backroom</fullName>
            </value>
            <value>
                <fullName>Brand Pump</fullName>
            </value>
            <value>
                <fullName>Carbonator</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>CGP</fullName>
            </value>
            <value>
                <fullName>Cladding</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Door Switch</fullName>
            </value>
            <value>
                <fullName>Drain</fullName>
            </value>
            <value>
                <fullName>FCM</fullName>
            </value>
            <value>
                <fullName>Flavor Pump</fullName>
            </value>
            <value>
                <fullName>Flow Control - Water/Soda</fullName>
            </value>
            <value>
                <fullName>Harness</fullName>
            </value>
            <value>
                <fullName>HMI</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Ice/Drink Dispense Switch</fullName>
            </value>
            <value>
                <fullName>Ice Bin</fullName>
            </value>
            <value>
                <fullName>Ice Dispense</fullName>
            </value>
            <value>
                <fullName>Key Lock</fullName>
            </value>
            <value>
                <fullName>KSM</fullName>
                <label>MAC / KSM</label>
            </value>
            <value>
                <fullName>Leak - Drain</fullName>
            </value>
            <value>
                <fullName>Leak - Syrup</fullName>
            </value>
            <value>
                <fullName>Leak - Water</fullName>
            </value>
            <value>
                <fullName>Levers</fullName>
            </value>
            <value>
                <fullName>Macro Board</fullName>
            </value>
            <value>
                <fullName>Micro Board - Static/Agitated</fullName>
            </value>
            <value>
                <fullName>Micro Pump</fullName>
            </value>
            <value>
                <fullName>Modem/Connectivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>