force-app/main/default/objects/Case/fields/ChainName__c.field-meta.xml
<CustomField>
    <fullName>ChainName__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.FSChainName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChainName</label>
    <type>Text</type>
</CustomField>