force-app/main/default/objects/Case/fields/CustomCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomCaseNumber__c</fullName>
    <label>CustomCaseNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>