force-app/main/default/objects/Case/fields/CustomClosedDate__c.field-meta.xml
<CustomField>
    <fullName>CustomClosedDate__c</fullName>
    <label>CustomClosedDate</label>
    <type>DateTime</type>
</CustomField>