force-app/main/default/objects/Case/fields/Customer_ACN__c.field-meta.xml
<CustomField>
    <fullName>Customer_ACN__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ACN</label>
    <type>Text</type>
</CustomField>