force-app/main/default/objects/Case/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.ShippingStreet &amp;&quot;, &quot;&amp;
FS_Outlet_Dispenser__r.FS_Outlet__r.ShippingCity &amp;&quot;, &quot; &amp; FS_Outlet_Dispenser__r.FS_Outlet__r.ShippingState &amp; &quot; &quot; &amp; FS_Outlet_Dispenser__r.FS_Outlet__r.ShippingPostalCode &amp; &quot;, &quot; &amp;
FS_Outlet_Dispenser__r.FS_Outlet__r.ShippingCountry</formula>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>