force-app/main/default/objects/Case/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <formula>Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>