force-app/main/default/objects/Case/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone number from associated Outlet</inlineHelpText>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>