force-app/main/default/objects/Case/fields/Customer_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_SAP_ID__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Outlet__r.FS_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer SAP ID</label>
    <type>Text</type>
</CustomField>