force-app/main/default/objects/Case/fields/Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Street__c</fullName>
    <formula>Account.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Street</label>
    <type>Text</type>
</CustomField>