force-app/main/default/objects/Case/fields/Customer_Zip__c.field-meta.xml
<CustomField>
    <fullName>Customer_Zip__c</fullName>
    <formula>Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Zip</label>
    <type>Text</type>
</CustomField>