force-app/main/default/objects/Case/fields/Description_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_issue__c</fullName>
    <inlineHelpText>Include additional details, service history,  images regarding issue</inlineHelpText>
    <label>Description of issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>