force-app/main/default/objects/Case/fields/Dispenser_serial_number__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_serial_number__c</fullName>
    <inlineHelpText>8 character alpha-numeric dispenser serial number. Separate multiple dispensers by comma.</inlineHelpText>
    <label>Dispenser serial number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>