force-app/main/default/objects/Case/fields/Dispenser_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Status_Changed__c</fullName>
    <formula>Not( FS_Static_Dispenser_Status__c ==FS_Dispenser_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispenser Status Changed</label>
    <type>Checkbox</type>
</CustomField>