force-app/main/default/objects/Case/fields/Duration_in_Account_Team_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Account_Team_on_Hold__c</fullName>
    <formula>TEXT(FLOOR(Status_Acc_Team_on_Hold_Mins__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(Status_Acc_Team_on_Hold_Mins__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(Status_Acc_Team_on_Hold_Mins__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <label>Duration in Account Team on Hold</label>
    <type>Text</type>
</CustomField>