force-app/main/default/objects/Case/fields/Duration_in_JDE_Install_Base_Notified__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_JDE_Install_Base_Notified__c</fullName>
    <formula>TEXT(FLOOR(JDEBaseNotified_Mins__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(JDEBaseNotified_Mins__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(JDEBaseNotified_Mins__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <label>Duration in JDE Install Base Notified</label>
    <type>Text</type>
</CustomField>