force-app/main/default/objects/Case/fields/Duration_in_New__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_New__c</fullName>
    <formula>TEXT(FLOOR(StatusNewInMinutes__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(StatusNewInMinutes__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(StatusNewInMinutes__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in New</label>
    <type>Text</type>
</CustomField>