force-app/main/default/objects/Case/fields/Duration_in_Pending_Install__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Pending_Install__c</fullName>
    <formula>TEXT(FLOOR(Pending_Install_Mins__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(Pending_Install_Mins__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(Pending_Install_Mins__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <label>Duration in Pending Install</label>
    <type>Text</type>
</CustomField>