force-app/main/default/objects/Case/fields/Escalate_to_Global_Center__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Global_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated to Global Center</label>
    <type>Checkbox</type>
</CustomField>