force-app/main/default/objects/Case/fields/Escalated_to_EMT__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_EMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated to EMT</label>
    <type>Checkbox</type>
</CustomField>