force-app/main/default/objects/Case/fields/FACT_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN__c</fullName>
    <label>ACN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>