force-app/main/default/objects/Case/fields/FACT_Active_Inactive_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Active_Inactive_Status__c</fullName>
    <label>Active/Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>