force-app/main/default/objects/Case/fields/FACT_Address__c.field-meta.xml
<CustomField>
    <fullName>FACT_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>