force-app/main/default/objects/Case/fields/FACT_Airwatch_Dispenser_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Airwatch_Dispenser_Status__c</fullName>
    <label>Dispenser Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>