force-app/main/default/objects/Case/fields/FACT_Airwatch_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>FACT_Airwatch_Enrollment_Date__c</fullName>
    <label>Enrollment Date</label>
    <type>DateTime</type>
</CustomField>