force-app/main/default/objects/Case/fields/FACT_Avg_signal_strength__c.field-meta.xml
<CustomField>
    <fullName>FACT_Avg_signal_strength__c</fullName>
    <label>Avg Signal Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>