force-app/main/default/objects/Case/fields/FACT_Build_ID__c.field-meta.xml
<CustomField>
    <fullName>FACT_Build_ID__c</fullName>
    <label>Build ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>