force-app/main/default/objects/Case/fields/FACT_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connectivity Issue</fullName>
            </value>
            <value>
                <fullName>Enrollment Issue</fullName>
            </value>
            <value>
                <fullName>Consumption Issue</fullName>
            </value>
            <value>
                <fullName>Alignment Issue</fullName>
            </value>
            <value>
                <fullName>Brand Selection</fullName>
            </value>
            <value>
                <fullName>Relocation / AMOA</fullName>
            </value>
            <value>
                <fullName>Software / Content</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>