force-app/main/default/objects/Case/fields/FACT_Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_Chain_ACN__c</fullName>
    <label>Chain ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>