force-app/main/default/objects/Case/fields/FACT_Collection_assignment__c.field-meta.xml
<CustomField>
    <fullName>FACT_Collection_assignment__c</fullName>
    <label>Collection assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>