force-app/main/default/objects/Case/fields/FACT_Country__c.field-meta.xml
<CustomField>
    <fullName>FACT_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>