force-app/main/default/objects/Case/fields/FACT_Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>FACT_Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>