force-app/main/default/objects/Case/fields/FACT_days_in_previous_month_called_in__c.field-meta.xml
<CustomField>
    <fullName>FACT_days_in_previous_month_called_in__c</fullName>
    <label># of days in previous month called in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>