force-app/main/default/objects/Case/fields/FACT_Days_Since_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>FACT_Days_Since_Last_Seen__c</fullName>
    <label>Days Since Last Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>