force-app/main/default/objects/Case/fields/FACT_Dispenser_Category__c.field-meta.xml
<CustomField>
    <fullName>FACT_Dispenser_Category__c</fullName>
    <label>Dispenser  Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>