force-app/main/default/objects/Case/fields/FACT_Dispenser_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>FACT_Dispenser_OS_Version__c</fullName>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>