force-app/main/default/objects/Case/fields/FACT_Dispenser_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Dispenser_Serial_Number__c</fullName>
    <description>Dispenser Serial Number</description>
    <inlineHelpText>8 character alpha-numeric dispenser serial number. Separate multiple dispensers by comma.</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>