force-app/main/default/objects/Case/fields/FACT_Dispenser_Software_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Dispenser_Software_Type__c</fullName>
    <label>Dispenser Software Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>