force-app/main/default/objects/Case/fields/FACT_Document_Line_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Line_Last_Status__c</fullName>
    <label>Last Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>