force-app/main/default/objects/Case/fields/FACT_Document_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Line_Number__c</fullName>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>