force-app/main/default/objects/Case/fields/FACT_Duration_in_Escalated_In_Validation__c.field-meta.xml
<CustomField>
    <fullName>FACT_Duration_in_Escalated_In_Validation__c</fullName>
    <formula>TEXT(FLOOR(FACT_StatusGcInValidationMins__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(FACT_StatusGcInValidationMins__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(FACT_StatusGcInValidationMins__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Escalated In Validation</label>
    <type>Text</type>
</CustomField>