force-app/main/default/objects/Case/fields/FACT_Duration_JDE_AMS_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>FACT_Duration_JDE_AMS_on_Hold__c</fullName>
    <formula>TEXT(FLOOR(JDEAMSOnHold__c/1440))&amp;&#39; D/ &#39;&amp;TEXT(FLOOR(MOD(JDEAMSOnHold__c/1440,1)*24))&amp;&#39; Hr/ &#39;&amp; TEXT(FLOOR(MOD(MOD(JDEAMSOnHold__c/1440,1)*24,1)*60))&amp;&#39; Min&#39;</formula>
    <label>Duration in JDE AMS on Hold</label>
    <type>Text</type>
</CustomField>