force-app/main/default/objects/Case/fields/FACT_GC_Case_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>FACT_GC_Case_Age_Days__c</fullName>
    <formula>CASE( MOD(IF(ISBLANK(FACT_Time_of_GC_Complete__c),TODAY(),datevalue(FACT_Time_of_GC_Complete__c)) - datevalue(FACT_Time_of_Escalation__c),7), 
0, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,1,1,1,2,1,3,1,4,1,5,0,6,0,1), 
1, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,2,1,2,2,2,3,2,4,1,5,0,6,1,1), 
2, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,3,1,3,2,3,3,2,4,1,5,1,6,2,1), 
3, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,4,1,4,2,3,3,2,4,2,5,2,6,3,1), 
4, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,5,1,4,2,3,3,3,4,3,5,3,6,4,1), 
5, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,5,1,4,2,4,3,4,4,4,5,4,6,5,1), 
6, CASE(MOD( datevalue(FACT_Time_of_Escalation__c)- DATE(1985,6,24),7),0,5,1,5,2,5,3,5,4,5,5,5,6,5,1), 
999) 
+ 
(FLOOR((IF(ISBLANK(FACT_Time_of_GC_Complete__c),TODAY(),datevalue(FACT_Time_of_GC_Complete__c))- datevalue( FACT_Time_of_Escalation__c))/7)*5)</formula>
    <label>GC Case Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>