force-app/main/default/objects/Case/fields/FACT_Install_complete_FET__c.field-meta.xml
<CustomField>
    <fullName>FACT_Install_complete_FET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install complete FET</label>
    <type>Checkbox</type>
</CustomField>